added resume section

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
       src="https://kit.fontawesome.com/ca9945fa9c.js"
       crossorigin="anonymous"
     ></script>
+    <link href="
+https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
+" rel="stylesheet">
+
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/media-querys.css" />
   </head>
@@ -26,7 +30,7 @@
             <a href="index.html"><li>Home</li></a>
             <a href="#projects"><li>Projects</li></a>
             <a href="#contactme"><li>Contact</li></a>
-            <a href="#"><li>Resume</li></a>
+            <a href="resume.html"><li>Resume</li></a>
           </ul>
         </div>
       </div>
@@ -37,7 +41,7 @@
           <a href="index.html"><li class="mobile-l">Home</li></a>
           <a href="#projects"><li class="mobile-l">Projects</li></a>
           <a href="#contactme"><li class="mobile-l">Contact</li></a>
-          <a href="#"><li class="mobile-l" id="last-nav">Resume</li></a>
+          <a href="resume.html"><li class="mobile-l" id="last-nav">Resume</li></a>
         </ul>
       </div>
     </header>
@@ -221,22 +225,22 @@
           <p><a href="https://github.com/Skenderman" target="_blank"><i class="fa-brands fa-github fa-lg"></i> GitHub</a></p>
           <p><i class="fa-solid fa-phone"></i>+38349631622</p>
         </div>
-    </section>
+
     <footer class="container">
       <div class="footer">
         <p class="blue footer-txt">Brilant Krasniqi ━ 2024</p>
         <p>
-          <a
-            href="https://www.linkedin.com/in/brilant-krasniqi-3128151b4/"
+          <a href="https://www.linkedin.com/in/brilant-krasniqi-3128151b4/"
             target="_blank"
-            ><i class="fa-brands fa-linkedin-in"></i> Linkedin &nbsp; &nbsp;</a
-          >
+            ><i class="fa-brands fa-linkedin-in"></i> Linkedin &nbsp; &nbsp;</a>
           <a href="https://github.com/Skenderman" target="_blank"
-            ><i class="fa-brands fa-github fa-lg"></i> GitHub</a
-          >
+            ><i class="fa-brands fa-github fa-lg"></i> GitHub</a>
         </p>
       </div>
     </footer>
+    <script src="
+https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js
+"></script>
     <script src="./script.js"></script>
   </body>
 </html>
