--- a/index.html
+++ b/index.html
@@ -10,13 +10,17 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" type="image/x-icon" href="./img/favicon/favicon.ico" />
     <script
       src="https://kit.fontawesome.com/ca9945fa9c.js"
       crossorigin="anonymous"
     ></script>
-    <link href="
+    <link
+      href="
 https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
-" rel="stylesheet">
+"
+      rel="stylesheet"
+    />
 
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/media-querys.css" />
@@ -41,7 +45,9 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
           <a href="index.html"><li class="mobile-l">Home</li></a>
           <a href="#projects"><li class="mobile-l">Projects</li></a>
           <a href="#contactme"><li class="mobile-l">Contact</li></a>
-          <a href="resume.html"><li class="mobile-l" id="last-nav">Resume</li></a>
+          <a href="resume.html"
+            ><li class="mobile-l" id="last-nav">Resume</li></a
+          >
         </ul>
       </div>
     </header>
@@ -203,38 +209,48 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
         <div>
           <h5>Location</h5>
           <p>Prishtina, Kosova</p>
-            <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d46940.16392822734!2d21.117527839848265!3d42.666435831705655!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x13549ee605110927%3A0x9365bfdf385eb95a!2sPristina!5e0!3m2!1sen!2s!4v1724437497987!5m2!1sen!2s"
-              width="300"
-              height="300"
-              style="border: 0"
-              allowfullscreen=""
-              loading="lazy"
-              referrerpolicy="no-referrer-when-downgrade"
-            ></iframe>
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d46940.16392822734!2d21.117527839848265!3d42.666435831705655!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x13549ee605110927%3A0x9365bfdf385eb95a!2sPristina!5e0!3m2!1sen!2s!4v1724437497987!5m2!1sen!2s"
+            width="300"
+            height="300"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
         </div>
         <div class="card">
           <p>
             <i class="fa-solid fa-envelope"></i> brilantkrasniqi26@gmail.com
           </p>
-          <p><a
-            href="https://www.linkedin.com/in/brilant-krasniqi-3128151b4/"
-            target="_blank"
-            ><i class="fa-brands fa-linkedin-in"></i> Linkedin</a
-          ></p>
-          <p><a href="https://github.com/Skenderman" target="_blank"><i class="fa-brands fa-github fa-lg"></i> GitHub</a></p>
+          <p>
+            <a
+              href="https://www.linkedin.com/in/brilant-krasniqi-3128151b4/"
+              target="_blank"
+              ><i class="fa-brands fa-linkedin-in"></i> Linkedin</a
+            >
+          </p>
+          <p>
+            <a href="https://github.com/Skenderman" target="_blank"
+              ><i class="fa-brands fa-github fa-lg"></i> GitHub</a
+            >
+          </p>
           <p><i class="fa-solid fa-phone"></i>+38349631622</p>
         </div>
-
+      </div>
+    </section>
     <footer class="container">
       <div class="footer">
         <p class="blue footer-txt">Brilant Krasniqi ━ 2024</p>
         <p>
-          <a href="https://www.linkedin.com/in/brilant-krasniqi-3128151b4/"
+          <a
+            href="https://www.linkedin.com/in/brilant-krasniqi-3128151b4/"
             target="_blank"
-            ><i class="fa-brands fa-linkedin-in"></i> Linkedin &nbsp; &nbsp;</a>
+            ><i class="fa-brands fa-linkedin-in"></i> Linkedin &nbsp; &nbsp;</a
+          >
           <a href="https://github.com/Skenderman" target="_blank"
-            ><i class="fa-brands fa-github fa-lg"></i> GitHub</a>
+            ><i class="fa-brands fa-github fa-lg"></i> GitHub</a
+          >
         </p>
       </div>
     </footer>
