--- a/index.html
+++ b/index.html
@@ -108,13 +108,17 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
             <a href="#">
               Code &nbsp;<i class="fa-brands fa-github fa-lg"></i
             ></a>
-            <a href="#">
+            <a href="/optimum-lift/">
               Live Demo &nbsp;<i class="fa-solid fa-up-right-from-square"></i
             ></a>
           </p>
         </div>
         <div class="project-img">
-          <img src="./img/Optimum Lift.png" alt="OptimumLift" />
+          <img
+            src="./img/Optimum Lift.png"
+            href="/optimum-lift/"
+            alt="OptimumLift"
+          />
         </div>
       </div>
       <div class="project-reverse">
