made some loading optimizations and squashed some bugs

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
         </div>
         <div class="project-img">
           <a href="/optimum-lift/" target="_blank"
-            ><img src="./img/Optimum Lift.png" alt="OptimumLift"
+            ><img src="./img/Optimum Lift.png" loading="lazy" alt="OptimumLift"
           /></a>
         </div>
       </div>
@@ -143,7 +143,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
           </p>
         </div>
         <div class="project-img">
-          <a href="/travellian/" target="_blank"
+          <a href="/travellian/" loading="lazy" target="_blank"
             ><img id="reverse" src="./img/Travellian.png" alt="Travellian"
           /></a>
         </div>
@@ -163,13 +163,13 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
             <a href="#">
               Code &nbsp;<i class="fa-brands fa-github fa-lg"></i
             ></a>
-            <a href="/psychology-elevation/" target="_blank">
+            <a href="/psychology-elevation/" loading="lazy" target="_blank">
               Live Demo &nbsp;<i class="fa-solid fa-up-right-from-square"></i
             ></a>
           </p>
         </div>
         <div class="project-img">
-          <a href="/psychology-elevation/" target="_blank"
+          <a href="/psychology-elevation/" loading="lazy" target="_blank"
             ><img
               src="./img/Psychology Elevation.png"
               alt="Psychology Elevation"
@@ -200,7 +200,11 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
         </div>
         <div class="project-img">
           <a href="/Rezilla/" target="_blank">
-            <img id="reverse" src="./img/Rezilla.png" alt="Travellian"
+            <img
+              id="reverse"
+              src="./img/Rezilla.png"
+              loading="lazy"
+              alt="Travellian"
           /></a>
         </div>
       </div>
