--- a/optimum-lift/checkout.html
+++ b/optimum-lift/checkout.html
@@ -37,9 +37,9 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
           </li>
           <li class="navbar-list"><a href="index.html#faq">FAQ</a></li>
           <li class="navbar-list">
-            <a href="index.html#about-us">About Us</a>
+            <a href="index.html#about-me">About Me</a>
           </li>
-          <li class="navbar-list"><a href="contact-us.html">Contact Us</a></li>
+          <li class="navbar-list"><a href="contact-us.html">Contact</a></li>
         </ul>
         <button class="shop-now">
           <i class="fa-solid fa-cart-shopping"></i>
@@ -60,11 +60,15 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
               <li class="nav-mobile">
                 <a href="learn-more.html">Learn More</a>
               </li>
-              <li class="nav-mobile"><a href="#reviews">Testimonials</a></li>
-              <li class="nav-mobile"><a href="#faq">FAQ</a></li>
-              <li class="nav-mobile"><a href="#about-us">About Us</a></li>
               <li class="nav-mobile">
-                <a href="contact-us.html">Contact Us</a>
+                <a href="index.html#reviews">Testimonials</a>
+              </li>
+              <li class="nav-mobile"><a href="index.html#faq">FAQ</a></li>
+              <li class="nav-mobile">
+                <a href="index.html#about-me">About Me</a>
+              </li>
+              <li class="nav-mobile">
+                <a href="contact-us.html">Contact</a>
               </li>
               <li class="nav-mobile menu-shop">
                 <a href="checkout.html"
