--- a/travellian/index.html
+++ b/travellian/index.html
@@ -85,22 +85,22 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-intersection@0.2.0/dist/
         <div class="splide__track">
           <ul class="splide__list">
             <li class="splide__slide">
-              <img src="./img/place1.jpg" alt="Landscape" />
+              <img src="./img/place1.jpg" loading="lazy" alt="Landscape" />
             </li>
             <li class="splide__slide">
-              <img src="./img/place2.jpg" alt="Landscape" />
+              <img src="./img/place2.jpg" loading="lazy" alt="Landscape" />
             </li>
             <li class="splide__slide">
-              <img src="./img/place3.jpg" alt="Landscape" />
+              <img src="./img/place3.jpg" loading="lazy" alt="Landscape" />
             </li>
             <li class="splide__slide">
-              <img src="./img/place4.jpg" alt="Landscape" />
+              <img src="./img/place4.jpg" loading="lazy" alt="Landscape" />
             </li>
             <li class="splide__slide">
-              <img src="./img/place5.jpg" alt="Landscape" />
+              <img src="./img/place5.jpg" loading="lazy" alt="Landscape" />
             </li>
             <li class="splide__slide">
-              <img src="./img/place6.jpg" alt="Landscape" />
+              <img src="./img/place6.jpg" loading="lazy" alt="Landscape" />
             </li>
           </ul>
         </div>
@@ -162,7 +162,12 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-intersection@0.2.0/dist/
           <ul class="splide__list">
             <li class="splide__slide">
               <div class="relative-div">
-                <img class="landmark-img" src="./img/castle.jpg" alt="" />
+                <img
+                  class="landmark-img"
+                  src="./img/castle.jpg"
+                  loading="lazy"
+                  alt=""
+                />
                 <div class="landmark-text">
                   <h3>Neuschwanstein Castle</h3>
                   <p>
@@ -173,7 +178,12 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-intersection@0.2.0/dist/
             </li>
             <li class="splide__slide">
               <div class="relative-div">
-                <img class="landmark-img" src="./img/bigben.jpg" alt="" />
+                <img
+                  class="landmark-img"
+                  src="./img/bigben.jpg"
+                  loading="lazy"
+                  alt=""
+                />
                 <div class="landmark-text">
                   <h3>Big Ben</h3>
                   <p>
@@ -188,6 +198,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-intersection@0.2.0/dist/
                 <img
                   class="landmark-img"
                   src="./img/statueofliberty.jpg"
+                  loading="lazy"
                   alt=""
                 />
                 <div class="landmark-text">
@@ -198,7 +209,12 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-intersection@0.2.0/dist/
             </li>
             <li class="splide__slide">
               <div class="relative-div">
-                <img class="landmark-img" src="./img/tajmahal.jpg" alt="" />
+                <img
+                  class="landmark-img"
+                  src="./img/tajmahal.jpg"
+                  loading="lazy"
+                  alt=""
+                />
                 <div class="landmark-text">
                   <h3>Taj Mahal</h3>
                   <p><i class="fa-solid fa-location-dot"></i> Agra, India</p>
@@ -207,7 +223,12 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-intersection@0.2.0/dist/
             </li>
             <li class="splide__slide">
               <div class="relative-div">
-                <img class="landmark-img" src="./img/torontotower.jpg" alt="" />
+                <img
+                  class="landmark-img"
+                  src="./img/torontotower.jpg"
+                  loading="lazy"
+                  alt=""
+                />
                 <div class="landmark-text">
                   <h3>CN Tower</h3>
                   <p>
@@ -218,7 +239,12 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-intersection@0.2.0/dist/
             </li>
             <li class="splide__slide">
               <div class="relative-div">
-                <img class="landmark-img" src="./img/italy.jpg" alt="" />
+                <img
+                  class="landmark-img"
+                  src="./img/italy.jpg"
+                  loading="lazy"
+                  alt=""
+                />
                 <div class="landmark-text">
                   <h3>Manarola</h3>
                   <p>
@@ -244,7 +270,11 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-intersection@0.2.0/dist/
             <li class="splide__slide">
               <div class="offer-wrapper">
                 <div class="offer-img">
-                  <img src="./img/Ksamil-Albania.jpg" alt="Ksamil Beach" />
+                  <img
+                    src="./img/Ksamil-Albania.jpg"
+                    loading="lazy"
+                    alt="Ksamil Beach"
+                  />
                 </div>
                 <div class="offer-txt-wrapper">
                   <div class="offer-txt">
@@ -288,6 +318,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-intersection@0.2.0/dist/
                 <div class="offer-img">
                   <img
                     src="./img/Cabo Da Roca-Portugal.jpg"
+                    loading="lazy"
                     alt="Cabo Da Roca"
                   />
                 </div>
@@ -331,7 +362,11 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-intersection@0.2.0/dist/
             <li class="splide__slide">
               <div class="offer-wrapper">
                 <div class="offer-img">
-                  <img src="./img/Santorini Greece.jpg" alt="Santorini" />
+                  <img
+                    src="./img/Santorini Greece.jpg"
+                    loading="lazy"
+                    alt="Santorini"
+                  />
                 </div>
                 <div class="offer-txt-wrapper">
                   <div class="offer-txt">
@@ -373,7 +408,11 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-intersection@0.2.0/dist/
             <li class="splide__slide">
               <div class="offer-wrapper">
                 <div class="offer-img">
-                  <img src="./img/Komani Lake-Albania.jpg" alt="Komani Lake" />
+                  <img
+                    src="./img/Komani Lake-Albania.jpg"
+                    loading="lazy"
+                    alt="Komani Lake"
+                  />
                 </div>
                 <div class="offer-txt-wrapper">
                   <div class="offer-txt">
@@ -417,6 +456,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-intersection@0.2.0/dist/
                 <div class="offer-img">
                   <img
                     src="./img/Neuschwanstein Castle.jpg"
+                    loading="lazy"
                     alt="Neuschwanstein"
                   />
                 </div>
@@ -460,7 +500,11 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-intersection@0.2.0/dist/
             <li class="splide__slide">
               <div class="offer-wrapper">
                 <div class="offer-img">
-                  <img src="./img/Venezia- Italy.jpg" alt="Venezia" />
+                  <img
+                    src="./img/Venezia- Italy.jpg"
+                    loading="lazy"
+                    alt="Venezia"
+                  />
                 </div>
                 <div class="offer-txt-wrapper">
                   <div class="offer-txt">
@@ -502,7 +546,11 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-intersection@0.2.0/dist/
             <li class="splide__slide">
               <div class="offer-wrapper">
                 <div class="offer-img">
-                  <img src="./img/Sinatra-Portugal.jpg" alt="Sinatra" />
+                  <img
+                    src="./img/Sinatra-Portugal.jpg"
+                    loading="lazy"
+                    alt="Sinatra"
+                  />
                 </div>
                 <div class="offer-txt-wrapper">
                   <div class="offer-txt">
@@ -544,7 +592,11 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-intersection@0.2.0/dist/
             <li class="splide__slide">
               <div class="offer-wrapper">
                 <div class="offer-img">
-                  <img src="./img/Cinque Terre Italy.jpg" alt="Cinque Terre" />
+                  <img
+                    src="./img/Cinque Terre Italy.jpg"
+                    loading="lazy"
+                    alt="Cinque Terre"
+                  />
                 </div>
                 <div class="offer-txt-wrapper">
                   <div class="offer-txt">
@@ -635,6 +687,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-intersection@0.2.0/dist/
                     <img
                       class="trip-image"
                       src="./img/Cochem Germany.jpg"
+                      loading="lazy"
                       alt=""
                     />
                     <div class="trip-info">
@@ -678,6 +731,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-intersection@0.2.0/dist/
                     <img
                       class="trip-image"
                       src="./img/Wengen Switzerland.jpg"
+                      loading="lazy"
                       alt="Wengen Switzerland"
                     />
                     <div class="trip-info">
@@ -721,6 +775,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-intersection@0.2.0/dist/
                     <img
                       class="trip-image"
                       src="./img/Taj Mahal India.jpg"
+                      loading="lazy"
                       alt="Taj Mahal India"
                     />
                     <div class="trip-info">
@@ -764,6 +819,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-intersection@0.2.0/dist/
                     <img
                       class="trip-image"
                       src="./img/Grand Canyon USA.jpg"
+                      loading="lazy"
                       alt="Grand Canyon USA"
                     />
                     <div class="trip-info">
@@ -807,6 +863,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-intersection@0.2.0/dist/
                     <img
                       class="trip-image"
                       src="./img/Varenna Italy.jpg"
+                      loading="lazy"
                       alt="Varenna Italy"
                     />
                     <div class="trip-info">
@@ -850,6 +907,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-intersection@0.2.0/dist/
                     <img
                       class="trip-image"
                       src="./img/South Tyrol Italy.jpg"
+                      loading="lazy"
                       alt="South Tyrol Italy"
                     />
                     <div class="trip-info">
@@ -893,6 +951,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-intersection@0.2.0/dist/
                     <img
                       class="trip-image"
                       src="./img/Karkow, Poland.jpg"
+                      loading="lazy"
                       alt="Karkow"
                     />
                     <div class="trip-info">
@@ -943,27 +1002,27 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-intersection@0.2.0/dist/
           <div class="splide__track">
             <ul class="splide__list">
               <li class="splide__slide">
-                <img src="./img/person1.jpg" alt="" />
+                <img src="./img/person1.jpg" loading="lazy" alt="" />
                 <p>Mo<span class="gallery-underline">unt Everest </span>Trip</p>
               </li>
               <li class="splide__slide">
-                <img src="./img/person2.jpg" alt="" />
+                <img src="./img/person2.jpg" loading="lazy" alt="" />
                 <p><span class="gallery-underline">Paris T</span>rip</p>
               </li>
               <li class="splide__slide">
-                <img src="./img/person3.jpg" alt="" />
+                <img src="./img/person3.jpg" loading="lazy" alt="" />
                 <p>Oce<span class="gallery-underline">an City </span>Visit</p>
               </li>
               <li class="splide__slide">
-                <img src="./img/person4.jpg" alt="" />
+                <img src="./img/person4.jpg" loading="lazy" alt="" />
                 <p><span class="gallery-underline">Taj Mahal </span>Viewing</p>
               </li>
               <li class="splide__slide">
-                <img src="./img/person5.jpg" alt="" />
+                <img src="./img/person5.jpg" loading="lazy" alt="" />
                 <p>Ma<span class="gallery-underline">sada Hi</span>king</p>
               </li>
               <li class="splide__slide">
-                <img src="./img/person6.jpg" alt="" />
+                <img src="./img/person6.jpg" loading="lazy" alt="" />
                 <p>Bel<span class="gallery-underline">gium T</span>our</p>
               </li>
             </ul>
@@ -981,7 +1040,12 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-intersection@0.2.0/dist/
           <ul class="splide__list">
             <li class="splide__slide">
               <div class="review-wrapper relative-div">
-                <img class="review-img" src="./img/review1.jpg" alt="" />
+                <img
+                  class="review-img"
+                  src="./img/review1.jpg"
+                  loading="lazy"
+                  alt=""
+                />
                 <div class="review-text">
                   <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -993,7 +1057,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-intersection@0.2.0/dist/
                     laborum perferendis magni minima, blanditiis ad veniam
                     eveniet!
                   </p>
-                  <img src="./img/stars.svg" alt="" />
+                  <img src="./img/stars.svg" loading="lazy" alt="" />
                 </div>
                 <div class="review-author">
                   <h3>Dona Smith</h3>
@@ -1003,7 +1067,12 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-intersection@0.2.0/dist/
             </li>
             <li class="splide__slide">
               <div class="review-wrapper relative-div">
-                <img class="review-img" src="./img/review2.jpg" alt="" />
+                <img
+                  class="review-img"
+                  src="./img/review2.jpg"
+                  loading="lazy"
+                  alt=""
+                />
                 <div class="review-text">
                   <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -1015,7 +1084,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-intersection@0.2.0/dist/
                     laborum perferendis magni minima, blanditiis ad veniam
                     eveniet!
                   </p>
-                  <img src="./img/stars.svg" alt="" />
+                  <img src="./img/stars.svg" loading="lazy" alt="" />
                 </div>
                 <div class="review-author">
                   <h3>Jamie Dohn</h3>
@@ -1025,7 +1094,13 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-intersection@0.2.0/dist/
             </li>
             <li class="splide__slide">
               <div class="review-wrapper relative-div">
-                <img class="review-img" src="./img/review3.jpg" alt="" />
+                <img
+                  class="review-img"
+                  loading="lazy"
+                  src="./img/review3.jpg"
+                  loading="lazy"
+                  alt=""
+                />
                 <div class="review-text">
                   <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -1047,7 +1122,13 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-intersection@0.2.0/dist/
             </li>
             <li class="splide__slide">
               <div class="review-wrapper relative-div">
-                <img class="review-img" src="./img/review4.jpg" alt="" />
+                <img
+                  class="review-img"
+                  loading="lazy"
+                  src="./img/review4.jpg"
+                  loading="lazy"
+                  alt=""
+                />
                 <div class="review-text">
                   <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -1069,7 +1150,12 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-intersection@0.2.0/dist/
             </li>
             <li class="splide__slide">
               <div class="review-wrapper relative-div">
-                <img class="review-img" src="./img/review5.jpg" alt="" />
+                <img
+                  class="review-img"
+                  src="./img/review5.jpg"
+                  loading="lazy"
+                  alt=""
+                />
                 <div class="review-text">
                   <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
