--- a/optimum-lift/index.html
+++ b/optimum-lift/index.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" type="image/x-icon" href="./img/favicon.ico" />
     <script
       src="https://kit.fontawesome.com/ca9945fa9c.js"
       crossorigin="anonymous"
@@ -33,8 +34,8 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
           <li class="navbar-list"><a href="learn-more.html">Learn More</a></li>
           <li class="navbar-list"><a href="#reviews">Testimonials</a></li>
           <li class="navbar-list"><a href="#faq">FAQ</a></li>
-          <li class="navbar-list"><a href="#about-us">About Us</a></li>
-          <li class="navbar-list"><a href="contact-us.html">Contact Us</a></li>
+          <li class="navbar-list"><a href="#about-me">About Me</a></li>
+          <li class="navbar-list"><a href="contact-us.html">Contact</a></li>
         </ul>
         <button class="shop-now">
           <i class="fa-solid fa-cart-shopping"></i>
@@ -57,9 +58,9 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
               </li>
               <li class="nav-mobile"><a href="#reviews">Testimonials</a></li>
               <li class="nav-mobile"><a href="#faq">FAQ</a></li>
-              <li class="nav-mobile"><a href="#about-us">About Us</a></li>
+              <li class="nav-mobile"><a href="#about-me">About Me</a></li>
               <li class="nav-mobile">
-                <a href="contact-us.html">Contact Us</a>
+                <a href="contact-us.html">Contact</a>
               </li>
               <li class="nav-mobile menu-shop">
                 <a href="checkout.html"
@@ -92,9 +93,14 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
             <i class="fa-solid fa-minus"></i> Pointers and advice on how to
             perform each exercise
           </p>
+          <div class="prod-counter">
+            <button class="minus"><i class="fa-solid fa-minus"></i></button>
+            <div class="counter-value">1</div>
+            <button class="plus"><i class="fa-solid fa-plus"></i></button>
+          </div>
           <div class="price">
+            <h2 id="discounted-price">29.90$</h2>
             <p class="original-price">79.99$</p>
-            <h2>39.99$</h2>
           </div>
           <div class="hero-btns">
             <a href="checkout.html">
@@ -203,15 +209,20 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
             <div class="s3-p">
               <h3>Exercise choice is extremely important</h3>
               <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni,
-                expedita nostrum enim rem sed odit. Corrupti culpa sunt, porro
-                laborum fugit et nostrum adipisci a asperiores cumque magni iure
-                iusto perferendis, numquam reprehenderit quas perspiciatis quo
-                eius consequatur, nemo unde reiciendis illum. Obcaecati fugit
-                similique eaque, quas impedit delectus excepturi?
+                Exercise choice is crucial because it tailors workouts to
+                individual goals, abilities, and preferences, maximizing
+                effectiveness and reducing injury risk. By selecting the right
+                exercises, you can target specific muscle groups, improve
+                overall fitness, and stay motivated, ensuring a balanced and
+                sustainable fitness journey that aligns with personal
+                objectives.
               </p>
               <button class="blue">
-                Read More &nbsp;<i class="fa-solid fa-chevron-right fa-sm"></i>
+                <a href="learn-more.html"
+                  >Read More &nbsp;<i
+                    class="fa-solid fa-chevron-right fa-sm"
+                  ></i
+                ></a>
               </button>
             </div>
           </div>
@@ -231,8 +242,8 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
         <div class="s5-t">
           <h2>What our clients say</h2>
           <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Harum nemo
-            dolore debitis voluptates officia doloribus.
+            Read about our clients success stories and see their
+            transformations!
           </p>
         </div>
         <div id="testimonials" class="splide">
@@ -337,10 +348,70 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
           </div>
         </div>
       </div>
-      <section class="section" id="about-us">
+      <section class="section" id="faq">
+        <div class="container">
+          <h2 class="faq-h">Frequently Asked Questions</h2>
+          <div class="accordion-wrapper">
+            <div class="accordion">
+              <div class="accordion-heading">
+                <h3>Can I repeat each phase for as long as I want?</h3>
+                <i class="fas fa-angle-down"></i>
+              </div>
+              <p class="accordion-content">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta
+                similique cupiditate doloribus! Quia nostrum fugiat molestiae
+                velit labore explicabo maiores!
+              </p>
+            </div>
+          </div>
+          <div class="accordion-wrapper">
+            <div class="accordion">
+              <div class="accordion-heading">
+                <h3>If I feel tired should I still go wrokout?</h3>
+                <i class="fas fa-angle-down"></i>
+              </div>
+              <p class="accordion-content">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta
+                similique cupiditate doloribus! Quia nostrum fugiat molestiae
+                velit labore explicabo maiores!
+              </p>
+            </div>
+          </div>
+          <div class="accordion-wrapper">
+            <div class="accordion">
+              <div class="accordion-heading">
+                <h3>
+                  Do I need to have access to gym equipment for this workout
+                  plan?
+                </h3>
+                <i class="fas fa-angle-down"></i>
+              </div>
+              <p class="accordion-content">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta
+                similique cupiditate doloribus! Quia nostrum fugiat molestiae
+                velit labore explicabo maiores!
+              </p>
+            </div>
+          </div>
+          <div class="accordion-wrapper">
+            <div class="accordion">
+              <div class="accordion-heading">
+                <h3>How many days a week do I have to workout?</h3>
+                <i class="fas fa-angle-down"></i>
+              </div>
+              <p class="accordion-content">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta
+                similique cupiditate doloribus! Quia nostrum fugiat molestiae
+                velit labore explicabo maiores!
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section" id="about-me">
         <div class="container">
           <div class="s7-t">
-            <h2>About Us</h2>
+            <h2>About Me</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque cum
               tenetur tempora provident, voluptate enim?
@@ -349,96 +420,24 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
           <div class="s7-c-w">
             <div class="s7-c">
               <img src="./img/brilant.png" alt="" />
-              <h3>Brilant Krasniqi</h3>
-              <p>Founder</p>
-              <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Reiciendis laborum blanditiis dolore inventore eum nesciunt?
-              </p>
-              <div class="socials">
-                <a href="#"><i class="fa-brands fa-facebook fa-lg"></i></a>
-                <a href="#"><i class="fa-brands fa-x-twitter fa-lg"></i></a>
-                <a href="#"><i class="fa-brands fa-instagram fa-lg"></i></a>
-                <a href="#"><i class="fa-brands fa-linkedin fa-lg"></i></a>
-              </div>
-            </div>
-            <div class="s7-c">
-              <img src="./img/dren.jpg" alt="" />
-              <h3>Dren Bytyqi</h3>
-              <p>Co-Founder</p>
-              <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Reiciendis laborum blanditiis dolore inventore eum nesciunt?
-              </p>
-              <div class="socials">
-                <a href="#"><i class="fa-brands fa-facebook fa-lg"></i></a>
-                <a href="#"><i class="fa-brands fa-x-twitter fa-lg"></i></a>
-                <a href="#"><i class="fa-brands fa-instagram fa-lg"></i></a>
-                <a href="#"><i class="fa-brands fa-linkedin fa-lg"></i></a>
+              <div>
+                <h3>Brilant Krasniqi</h3>
+                <p>Founder</p>
+                <p>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  Reiciendis laborum blanditiis dolore inventore eum nesciunt?
+                </p>
+                <div class="socials">
+                  <p>
+                    <a href="#"><i class="fa-brands fa-instagram fa-lg"></i></a>
+                    <a href="#"><i class="fa-brands fa-linkedin fa-lg"></i></a>
+                  </p>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </section>
-    </section>
-    <section class="section" id="faq">
-      <div class="container">
-        <h2 class="faq-h">Frequently Asked Questions</h2>
-        <div class="accordion-wrapper">
-          <div class="accordion">
-            <div class="accordion-heading">
-              <h3>Can I repeat each phase for as long as I want?</h3>
-              <i class="fas fa-angle-down"></i>
-            </div>
-            <p class="accordion-content">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta
-              similique cupiditate doloribus! Quia nostrum fugiat molestiae
-              velit labore explicabo maiores!
-            </p>
-          </div>
-        </div>
-        <div class="accordion-wrapper">
-          <div class="accordion">
-            <div class="accordion-heading">
-              <h3>If I feel tired should I still go wrokout?</h3>
-              <i class="fas fa-angle-down"></i>
-            </div>
-            <p class="accordion-content">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta
-              similique cupiditate doloribus! Quia nostrum fugiat molestiae
-              velit labore explicabo maiores!
-            </p>
-          </div>
-        </div>
-        <div class="accordion-wrapper">
-          <div class="accordion">
-            <div class="accordion-heading">
-              <h3>
-                Do I need to have access to gym equipment for this workout plan?
-              </h3>
-              <i class="fas fa-angle-down"></i>
-            </div>
-            <p class="accordion-content">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta
-              similique cupiditate doloribus! Quia nostrum fugiat molestiae
-              velit labore explicabo maiores!
-            </p>
-          </div>
-        </div>
-        <div class="accordion-wrapper">
-          <div class="accordion">
-            <div class="accordion-heading">
-              <h3>How many days a week do I have to workout?</h3>
-              <i class="fas fa-angle-down"></i>
-            </div>
-            <p class="accordion-content">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta
-              similique cupiditate doloribus! Quia nostrum fugiat molestiae
-              velit labore explicabo maiores!
-            </p>
-          </div>
-        </div>
-      </div>
     </section>
     <footer class="section footer">
       <div class="container sFin">
