--- a/psychology-elevation/index.html
+++ b/psychology-elevation/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Psychology Elevation</title>
     <link rel="stylesheet" href="./css/bootstrap.css" />
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
@@ -40,7 +41,7 @@
     </nav>
     <section class="bg-dark text-light p-5 text-center text-sm-start">
       <div class="container">
-        <div class="d-sm-flex align-items-center justify-content-between">
+        <div class="d-sm-flex align-items-center justify-content-between p-5">
           <div>
             <h1>Become a <span class="text-warning">Better</span> Therapist</h1>
             <p class="lead my-4">
